--- a/salon-data/pom.xml
+++ b/salon-data/pom.xml
@@ -56,6 +56,11 @@
             <version>0.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
